infra/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcb-worker
  namespace: life-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lcb-worker
  template:
    metadata:
      labels:
        app: lcb-worker
    spec:
      containers:
        - name: worker
          image: lcb-worker:latest
          imagePullPolicy: IfNotPresent
